Added dynamic port and fixed swagger
